Fix spacing between navbar and header

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -111,7 +111,7 @@ img {
 }
 
 #body-container {
-  margin-top: 70px;
+  margin-top: 40px;
 }
 
 .delete-icon {
